--- a/config.json
+++ b/config.json
@@ -7,5 +7,5 @@
     "app_secret": "",
     "redirect_uri": "",
     "created_at": 1,
-    "request_endpoint": ""
+    "request_endpoint": "https://api.inaturalist.org/v1"
 }
